--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -217,46 +217,46 @@
                             <div class="contact-item">
                                 <div class="icon">
                                     <i class="fas fa-map-marker-alt"></i>
-                                    <span>Location</span>
+                                    <span>Location: Ghaziabad,Uttar Pradesh India</span>
                                 </div>
                                 <p>
-                                    : Ghaziabad,Uttar Pradesh India
+
                                 </p>
                             </div>
                             <div class="contact-item">
                                 <div class="icon">
                                     <i class="fas fa-envelope"></i>
-                                    <span>Email</span>
+                                    <span>Email:shaliniyadav0203@gmail.com</span>
                                 </div>
                                 <p>
-                                    <span>: shaliniyadav0203@gmail.com</span>
+                                    <span></span>
                                 </p>
                             </div>
                             <div class="contact-item">
                                 <div class="icon">
                                     <i class="fas fa-user-graduate"></i>
-                                    <span>Education</span>
+                                    <span>Education: ABES Institute of Technology</span>
                                 </div>
                                 <p>
-                                    <span>: ABES Institute of Technology</span>
+                                    <span></span>
                                 </p>
                             </div>
                             <div class="contact-item">
                                 <div class="icon">
                                     <i class="fas fa-user-graduate"></i>
-                                    <span>Mobile Number</span>
+                                    <span>Mobile Number: 8130856358</span>
                                 </div>
                                 <p>
-                                    <span>: 8130856358</span>
+                                    <span></span>
                                 </p>
                             </div>
                             <div class="contact-item">
                                 <div class="icon">
                                     <i class="fas fa-globe-africa"></i>
-                                    <span>Languages</span>
+                                    <span>Languages: English,Hindi</span>
                                 </div>
                                 <p>
-                                    <span>: English,Hindi</span>
+                                    <span></span>
                                 </p>
                             </div>
                         </div>
